--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URI=your_mongodb_connection_string
-JWT_SECRET=your_super_secret_key
+MONGO_URI=mongodb://localhost:27017/educationalcourses
+JWT_SECRET=131296
